-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.561 2009-07-01 06:20:37 guru Exp $
-----------------------------------------------------------------------------------------

2009-06-30	pwessel
	* grdfilter.c:		Toggle -T was not processed correctly if -Rgridfile was given.
	* mgd77list.c:		Output relative time did not use GMT's --TIME_*

2009-06-27	remko
	* gmt_init.c (GMT_history):	No longer remove supposedly empty .gmtcommands4 file.
				Could have been written to by piped GMT command. Now create/write
				only when new matter is to be written.

2009-06-25	pwessel
	* gmt_grdio.c:		Change for reasonable x/y range if units has the words "longitude"
				or "latitude" before concluding we have geodetic coordinates.
	* gmt_support.c:	The modifier :<radius>[unit] to the -G option in grdcontour for
				the placement of contour labels is now +r<radius>[unit] since the
				colon interfered with ddd:mm:ss coordinates.

2009-06-24	jluis
	* x2sys/x2sys_merge.c:	New program to merge updated COEs table into a main COE table database
	* mgd77/mgd77.c:	Do not use any GMT_XXX to access ascii files on creation/writing so that
				it can work on Windows as well (improvement on 2009-06-07 changes).

2009-06-24	pwessel
	* ps2raster.c:		Exceeded memory allocation for out_file.  Now in static memory.

2009-06-24	jluis
	* ps2raster.c:		Do not crash if a name with extension is given to -F (rip the extension)

2009-06-23	pwessel
	* mgd77/mgd77manage.c:	-AE will ignore the verification status and process e77 anyway.
	* mgd77/mgd77path.c:	Added -P- to just list the IDs and not the full paths

2009-06-21	pwessel
	* gmt_support.c:	Given -I601+/601+ the y_inc was not treated correctly

2009-06-20	pwessel
	* gmt_shore.c:		Added support for the +p<percent> modifier to limit features whose
				area is less the <percent> of the corresponding full-resolution polygon

2009-06-19	pwessel